feat: add NGBoost regressor support with Optuna optimization
- Add NGBoost to supported regressors (xgboost, lightgbm, histgradientboosting, ngboost)
- Install ngboost==0.5.8 in Docker image
- Implement fit_regressor branch for NGBoost with:
  - Dynamic distribution selection via get_ngboost_dist() helper
  - Support for 5 distributions: normal, lognormal, exponential, laplace, t
  - Early stopping support with validation set (X_val/Y_val API)
  - Sample weights support for training and validation
  - Optuna trial handling with random_state adjustment
  - Verbosity parameter conversion (verbosity -> verbose)
- Add Optuna hyperparameter optimization support:
  - n_estimators: [100, 1000] (log-scaled)
  - learning_rate: [0.001, 0.3] (log-scaled)
  - minibatch_frac: [0.5, 1.0] (linear)
  - col_sample: [0.3, 1.0] (linear)
  - dist: categorical [normal, lognormal]
  - Space reduction support for refined optimization
- Create get_ngboost_dist() helper function for distribution class mapping
- Default distribution: lognormal (optimal for crypto prices)
- Compatible with RMSE optimization objective (LogScore ≈ RMSE)

--- a/quickadapter/Dockerfile
+++ b/quickadapter/Dockerfile
@@ -3,6 +3,7 @@ FROM freqtradeorg/freqtrade:stable_freqai
 ARG optuna_version=4.6.0
 ARG scikit_learn_extra_version=0.3.0
 ARG scikit_image_version=0.26.0
+ARG ngboost_version=0.5.8
 
 USER root
 RUN apt-get update \
@@ -16,7 +17,8 @@ RUN pip install --user --no-cache-dir \
     optunahub \
     -r https://hub.optuna.org/samplers/auto_sampler/requirements.txt \
     scikit-learn-extra==${scikit_learn_extra_version} \
-    scikit-image==${scikit_image_version}
+    scikit-image==${scikit_image_version} \
+    ngboost==${ngboost_version}
 
 LABEL org.opencontainers.image.source="freqai-strategies" \
       org.opencontainers.image.title="freqtrade-quickadapter" \
