perf(quickadapter): default keep_extrema_fraction to 0.5 in config-template.json
Signed-off-by: Jérôme Benoit <jerome.benoit@piment-noir.org>

--- a/quickadapter/user_data/config-template.json
+++ b/quickadapter/user_data/config-template.json
@@ -137,7 +137,8 @@
       "beta": 12.0
     },
     "predictions_extrema": {
-      "threshold_smoothing_method": "isodata"
+      "threshold_smoothing_method": "isodata",
+      "keep_extrema_fraction": 0.5
     },
     "optuna_hyperopt": {
       "enabled": true,
