--- a/quickadapter/docker-compose.yml
+++ b/quickadapter/docker-compose.yml
@@ -20,6 +20,8 @@ services:
         optuna_version: 4.6.0
         scikit_learn_extra_version: 0.3.0
         scikit_image_version: 0.26.0
+        ngboost_version: 0.5.8
+        catboost_version: 1.2.8
     restart: unless-stopped
     container_name: freqtrade-quickadapter
     environment:
