--- a/renovate.json
+++ b/renovate.json
@@ -2,6 +2,8 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:recommended",
+    "abandonments:recommended",
+    ":configMigration",
     "group:allNonMajor",
     "schedule:daily",
     ":maintainLockFilesWeekly"
@@ -9,7 +11,10 @@
   "customManagers": [
     {
       "customType": "regex",
-      "managerFilePatterns": ["**/Dockerfile*", "**/docker-compose*.yml"],
+      "managerFilePatterns": [
+        "**/Dockerfile*",
+        "**/docker-compose*.yml"
+      ],
       "matchStrings": [
         "ARG\\s+(?<depName>\\w+)_version=(?<currentValue>[^\\s]+)",
         "\\s+(?<depName>\\w+)_version:\\s*(?<currentValue>[^\\s]+)"
