--- a/quickadapter/user_data/config-template.json
+++ b/quickadapter/user_data/config-template.json
@@ -14,7 +14,7 @@
   "cancel_open_orders_on_exit": false,
   // "trading_mode": "futures",
   // "margin_mode": "isolated",
-  // "leverage": 2.0,
+  // "leverage": 5.0,
   "trading_mode": "spot",
   "unfilledtimeout": {
     "entry": 10,
@@ -134,7 +134,7 @@
     "extrema_smoothing": {
       "method": "kaiser",
       "window_candles": 5,
-      "beta": 12.0
+      "beta": 14.0
     },
     "predictions_extrema": {
       "threshold_smoothing_method": "isodata",
@@ -173,6 +173,15 @@
       "label_period_candles": 18,
       "label_natr_multiplier": 10.5,
       "label_method": "kmedoids",
+      "label_weights": [
+        1.0,
+        4.0,
+        1.0,
+        1.0,
+        1.0,
+        2.0,
+        1.0
+      ],
       "include_shifted_candles": 6,
       "DI_threshold": 10,
       "weight_factor": 0.9,
