--- a/quickadapter/user_data/config-template.json
+++ b/quickadapter/user_data/config-template.json
@@ -124,21 +124,63 @@
     "fit_live_predictions_candles": 864,
     "data_kitchen_thread_count": 6, // set to number of CPU threads / 4
     "track_performance": false,
-    "extrema_weighting": {
+    "label_weighting": {
       "strategy": "none"
+      // Per-label format:
+      // "default": {
+      //   "strategy": "none"
+      // },
+      // "columns": {
+      //   "&s-extrema": {
+      //     "strategy": "amplitude",
+      //   }
+      // }
     },
-    // "extrema_weighting": {
-    //   "strategy": "amplitude",
-    //   "gamma": 1.5
-    // },
-    "extrema_smoothing": {
+    "label_smoothing": {
       "method": "kaiser",
       "window_candles": 5,
       "beta": 14.0
+      // Per-label format:
+      // "default": {
+      //   "method": "none"
+      // },
+      // "columns": {
+      //   "&s-extrema": {
+      //     "method": "kaiser",
+      //     "window_candles": 5,
+      //     "beta": 14.0
+      //   }
     },
-    "predictions_extrema": {
-      "threshold_smoothing_method": "isodata",
-      "keep_extrema_fraction": 0.5
+    "label_pipeline": {
+      // Per-label format:
+      // "default": {
+      //   "standardization": "none",
+      //   "normalization": "minmax",
+      //   "gamma": 1.0
+      // },
+      // "columns": {
+      //   "&s-extrema": {
+      //     "standardization": "none",
+      //     "normalization": "maxabs",
+      //     "gamma": 1.5
+      //   }
+      // }
+    },
+    "label_prediction": {
+      "method": "thresholding",
+      "threshold_method": "isodata",
+      "keep_fraction": 0.5
+      // Per-label format:
+      // "default": {
+      //   "method": "thresholding",
+      //   "threshold_method": "mean"
+      // },
+      // "columns": {
+      //   "&s-extrema": {
+      //     "threshold_method": "isodata",
+      //     "keep_fraction": 0.5
+      //   }
+      // }
     },
     "optuna_hyperopt": {
       "enabled": true,
@@ -153,8 +195,8 @@
       "DI_value_param2": 0,
       "DI_value_param3": 0,
       "DI_cutoff": 2,
-      "&s-minima_threshold": -2,
-      "&s-maxima_threshold": 2,
+      "&s-extrema_minima_threshold": -2,
+      "&s-extrema_maxima_threshold": 2,
       "label_period_candles": 18,
       "label_natr_multiplier": 10.5,
       "hp_rmse": -1
