--- a/quickadapter/.devcontainer/devcontainer.json
+++ b/quickadapter/.devcontainer/devcontainer.json
@@ -13,7 +13,9 @@
     "source=${localEnv:HOME}/.config/opencode,target=/home/ftuser/.config/opencode,type=bind,consistency=cached",
     "source=${localEnv:HOME}/.config/gh,target=/home/ftuser/.config/gh,type=bind,consistency=cached",
     "source=${localEnv:HOME}/.local/share/opencode,target=/home/ftuser/.local/share/opencode,type=bind,consistency=cached",
-    "source=${localEnv:HOME}/.local/state/opencode,target=/home/ftuser/.local/state/opencode,type=bind,consistency=cached"
+    "source=${localEnv:HOME}/.local/state/opencode,target=/home/ftuser/.local/state/opencode,type=bind,consistency=cached",
+    "source=${localEnv:HOME}/.cache/opencode,target=/home/ftuser/.cache/opencode,type=bind,consistency=cached",
+    "source=${localEnv:HOME}/.cache/oh-my-opencode,target=/home/ftuser/.cache/oh-my-opencode,type=bind,consistency=cached"
   ],
   "features": {
     "ghcr.io/devcontainers/features/nix:1": {
