fix(devcontainer): disable gh config mount to avoid migration bug
Prevents gh cli from failing due to multi-account migration when
keyring (dbus) is unavailable. GITHUB_TOKEN env var is used instead.

See: https://github.com/cli/cli/issues/8441

--- a/ReforceXY/.devcontainer/devcontainer.json
+++ b/ReforceXY/.devcontainer/devcontainer.json
@@ -11,7 +11,7 @@
   "mounts": [
     "source=${localWorkspaceFolder}/..,target=${localWorkspaceFolder}/..,type=bind,consistency=cached",
     "source=${localEnv:HOME}/.config/opencode,target=/home/ftuser/.config/opencode,type=bind,consistency=cached",
-    "source=${localEnv:HOME}/.config/gh,target=/home/ftuser/.config/gh,type=bind,consistency=cached",
+    // "source=${localEnv:HOME}/.config/gh,target=/home/ftuser/.config/gh,type=bind,consistency=cached",
     "source=${localEnv:HOME}/.local/share/opencode,target=/home/ftuser/.local/share/opencode,type=bind,consistency=cached",
     "source=${localEnv:HOME}/.local/state/opencode,target=/home/ftuser/.local/state/opencode,type=bind,consistency=cached",
     "source=${localEnv:HOME}/.cache/opencode,target=/home/ftuser/.cache/opencode,type=bind,consistency=cached",
